# implicit-data-recommendation-system

./: .gitignore  README.md  pyproject.toml
(legacy)/: 01_preprocess.ipynb
notebooks/: 02_modeling.ipynb  recommendation_system_lightfm.ipynb
